# EaseMed

./: README.md  main.py  pyproject.toml  requirements.txt
backend_code/chatbot/: chat.py  data.pth  intents.json  train.py
backend_code/health_news/: create_table.py  health_news.py  summarize.py
backend_code/hospitals_list/: nearest_hospital.py
lib/CategoriesScreen/: NearestHospital.dart
lib/components/: search_bar.dart
lib/screens/: home_screen.dart  onboarding_screen.dart
lib/screens/nav_bar/: news.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
promethius/: README.md  pubspec.yaml
promethius/android/app/: build.gradle
promethius/assets/: hospitals_data.json  medicines_data.json
promethius/ios/Runner/: Info.plist
promethius/ios/Runner.xcodeproj/: project.pbxproj
promethius/lib/: main.dart
promethius/lib/CategoriesScreen/: BloodServices.dart  Chatbot.dart  NearestHospital.dart  popupCard.dart
promethius/lib/CategoriesScreen/BloodServices/: ambulance.dart  bloodbank.dart  (+2 more)
promethius/lib/components/: MedicinePurchase.dart  bloodbank_card.dart  category_card.dart  doctor_card.dart  schedule_card.dart  search_bar.dart
promethius/lib/screens/: collective_page.dart  detail_screen.dart  home_screen.dart  onboarding_screen.dart
promethius/linux/: CMakeLists.txt  my_application.cc
promethius/test/: widget_test.dart
promethius/web/: index.html  manifest.json
promethius/windows/runner/: Runner.rc  main.cpp
windows/: CMakeLists.txt
(+9 files in other folders)
