[tool.poetry]
name = "Team EaseMed"
version = "0.1.0"
description = "This is our repo for our EaseMed"
authors = ["EaseMed"]

[tool.poetry.dependencies]
python = "^3.9"
newspaper3k = "^0.2.8"
fastapi = "^0.81.0"
nltk = "^3.7"
keras = "^2.10.0"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
